2014-05-19  Kirit Saelensminde  <kirit@felspar.com>
 Change the way that `boost::filesystem::wpath` instances are converted from strings in order to fix a Boost bug on Android.

2014-05-14  Kirit Saelensminde  <kirit@felspar.com>
 No longer throw `not_implemented` exceptions from the low level networking code.
 Fix a bug where an exception wasn't always thrown when errors were reported reading from a socket.

2014-05-13  Kirit Saelensminde  <kirit@felspar.com>
 Include HTTP user agent response constructor useful for tests.

2014-05-11  Kirit Saelensminde  <kirit@felspar.com>
 Allow the MIME headers to be cast to JSON.

2014-05-10  Kirit Saelensminde  <kirit@felspar.com>
Allow a termination lambda to also be passed into the HTTP server to control when to stop it. The lambda is only checked after a connection is opened.

2014-03-04  Kirit Saelensminde  <kirit@felspar.com>
 Hold the parser lock for a much shorter period when parsing a HTTP request to the web server.

2014-03-02  Kirit Saelensminde  <kirit@felspar.com>
 Alter the testing HTTP server request class so it can take a query string and the headers/body are optional.

2014-02-27  Kirit Saelensminde  <kirit@felspar.com>
 The `fostlib::url::query_string` class can now also be used to parse the standard format query string on the server side. The HTTP server query string is also now always a `url::query_string` instance.

2014-02-23  Kirit Saelensminde  <kirit@felspar.com>
 The MIME header names and values need to be retrievable in a case-insensitive manner as not everybody agrees on the correct case.

2014-02-22  Kirit Saelensminde  <kirit@felspar.com>
 Folding of long lines in MIME headers needs to be conditional on the protocol because most MIME protocols use it, but HTTP does not and some web servers don't handle folded lines.

2012-11-09  Kirit Saelensminde  <kirit@felspar.com>
 Allow the SMTP port to be set on the SMTP client and the tests.

2012-08-08  Kirit Saelensminde  <kirit@felspar.com>